--- a/index.html
+++ b/index.html
@@ -392,6 +392,7 @@
         </div>
       </section>
     </main>
+    <!-- Footer -->
     <footer class="page-down">
       <div class="container foot-class">
         <div class="logo-contain">
@@ -438,13 +439,16 @@
           </ul>
         </div>
         <div class="footer-bottom">
+          <p class="subscribe-class">Subscribe</p>
           <form class="footer-form" name="subscribe_form">
-            <input
-              class="footer-form-input"
-              name="subscribe_email"
-              type="email"
-              placeholder="E-mail"
-            />
+            <label class="label-class">
+              <input
+                class="footer-form-input"
+                name="subscribe_email"
+                type="email"
+                placeholder="E-mail"
+            /></label>
+
             <button class="button-form" type="submit">
               Subscribe
               <svg class="button-form-icon" width="24" height="24">
@@ -464,88 +468,105 @@
             <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
           </svg>
         </button>
-
-        <strong class="modal-caption"
-          >Leave your contacts and we will call you back</strong
-        >
+        <p class="modal-caption">
+          Leave your contacts and we will call you back
+        </p>
         <form
           class="modal-form"
           name="feedback-form"
           novalidate
           autocomplete="on"
         >
-          <label class="modal-form-label" for="user-name">Name</label>
-          <div class="modal-form-field">
-            <input
-              class="modal-form-input"
-              type="text"
-              name="user-name"
-              id="user-name"
-              placeholder="Ivan Ivanov"
-              required
-              minlength="3"
-            />
-            <svg class="modal-form-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
-            </svg>
+          <div class="modal-form-contain">
+            <label class="modal-form-label" for="user-name">Name</label>
+            <div class="modal-form-field">
+              <input
+                class="modal-form-input"
+                type="text"
+                name="user-name"
+                id="user-name"
+                placeholder="Ivan Ivanov"
+                required
+                minlength="3"
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+              </svg>
+            </div>
           </div>
-          <label class="modal-form-label" for="user-phone">Phone</label>
-          <div class="modal-form-field">
-            <input
-              class="modal-form-input"
-              type="tel"
-              name="user-phone"
-              id="user-phone"
-              placeholder=""
-              minlength="12"
-              maxlength="12"
-            />
-            <svg class="modal-form-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
-            </svg>
+
+          <div class="modal-form-contain">
+            <label class="modal-form-label" for="user-phone">Phone</label>
+            <div class="modal-form-field">
+              <input
+                class="modal-form-input"
+                type="tel"
+                name="user-phone"
+                id="user-phone"
+                placeholder=""
+                minlength="12"
+                maxlength="12"
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+              </svg>
+            </div>
           </div>
-          <label class="modal-form-label" for="user-email">Email</label>
-          <div class="modal-form-field">
-            <input
-              class="modal-form-input"
-              type="email"
-              name="user-email"
-              id="user-email"
-              placeholder="example@example.com"
-              required
-            />
-            <svg class="modal-form-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
-            </svg>
+
+          <div class="modal-form-contain">
+            <label class="modal-form-label" for="user-email">Email</label>
+            <div class="modal-form-field">
+              <input
+                class="modal-form-input"
+                type="email"
+                name="user-email"
+                id="user-email"
+                placeholder="example@example.com"
+                required
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+              </svg>
+            </div>
           </div>
-          <label class="modal-form-label" for="user-comment">Comments</label>
-          <textarea
-            class="modal-form-comment"
-            name="user-comment"
-            id="user-comment"
-            rows="5"
-            placeholder="Text input"
-            required
-            minlength="5"
-          ></textarea>
-          <label class="modal-form-agreement">
+
+          <div class="modal-form-contain">
+            <label class="modal-form-label" for="user-comment">Comments</label>
+            <div class="modal-form-field">
+              <textarea
+                class="modal-form-comment"
+                name="user-comment"
+                id="user-comment"
+                rows="5"
+                placeholder="Text input"
+              ></textarea>
+            </div>
+          </div>
+
+          <div class="checkbox-container">
             <input
-              class="checkbox"
+              class="checkbox visually-hidden"
               type="checkbox"
-              name="user-agreement"
-              value="yes"
+              name="user-privacy"
+              value="true"
+              id="user-privacy"
             />
-            <span class="modal-form-desc"
+            <label class="modal-form-agreement" for="user-privacy"
               >I accept the terms and conditions of the
+              <span class="modal-form-desc">
+                <svg class="modal-icon-check" width="10" height="8">
+                  <use href="./images/icons.svg#icon-Checkbox"></use>
+                </svg>
+              </span>
               <a
                 class="modal-form-link"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
                 >Privacy Policy</a
-              ></span
-            >
-          </label>
+              >
+            </label>
+          </div>
 
           <button class="button-form modal-form-btn" type="submit">Send</button>
         </form>
