--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
             <label class="label-class">
               <input
                 class="footer-form-input"
-                name="subscribe_email"
+                name="subscribe-email"
                 type="email"
                 placeholder="E-mail"
             /></label>
@@ -530,17 +530,15 @@
             </div>
           </div>
 
-          <div class="modal-form-contain">
-            <label class="modal-form-label" for="user-comment">Comments</label>
-            <div class="modal-form-field">
-              <textarea
-                class="modal-form-comment"
-                name="user-comment"
-                id="user-comment"
-                rows="5"
-                placeholder="Text input"
-              ></textarea>
-            </div>
+          <div class="modal-text-input">
+            <label class="modal-form-label" for="user-comment">Comment</label>
+            <textarea
+              class="modal-form-comment"
+              name="user-comment"
+              id="user-comment"
+              rows="5"
+              placeholder="Text input"
+            ></textarea>
           </div>
 
           <div class="checkbox-container">
