--- a/portfolio.html
+++ b/portfolio.html
@@ -288,13 +288,16 @@
           </ul>
         </div>
         <div class="footer-bottom">
+          <p class="subscribe-class">Subscribe</p>
           <form class="footer-form" name="subscribe_form">
-            <input
-              class="footer-form-input"
-              name="subscribe_email"
-              type="email"
-              placeholder="E-mail"
-            />
+            <label class="label-class">
+              <input
+                class="footer-form-input"
+                name="subscribe-email"
+                type="email"
+                placeholder="E-mail"
+            /></label>
+
             <button class="button-form" type="submit">
               Subscribe
               <svg class="button-form-icon" width="24" height="24">
