--- a/index.html
+++ b/index.html
@@ -549,13 +549,12 @@
               value="true"
               id="user-privacy"
             />
-            <label class="modal-form-agreement" for="user-privacy"
-              >I accept the terms and conditions of the
+            <label class="modal-form-agreement" for="user-privacy">
               <span class="modal-form-desc">
                 <svg class="modal-icon-check" width="10" height="8">
                   <use href="./images/icons.svg#icon-Checkbox"></use>
-                </svg>
-              </span>
+                </svg> </span
+              >I accept the terms and conditions of the
               <a
                 class="modal-form-link"
                 href=""
@@ -566,7 +565,7 @@
             </label>
           </div>
 
-          <button class="button-form modal-form-btn" type="submit">Send</button>
+          <button class="button-form" type="submit">Send</button>
         </form>
       </div>
     </div>
