--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
             </label>
           </div>
 
-          <button class="button-form" type="submit">Send</button>
+          <button class="modal-btn" type="submit">Send</button>
         </form>
       </div>
     </div>
