--- a/index.html
+++ b/index.html
@@ -543,16 +543,17 @@
 
           <div class="checkbox-container">
             <input
-              class="checkbox visually-hidden"
+              class="checkbox-modal visually-hidden"
               type="checkbox"
               name="user-privacy"
               value="true"
               id="user-privacy"
+              required
             />
             <label class="modal-form-agreement" for="user-privacy">
               <span class="modal-form-desc">
                 <svg class="modal-icon-check" width="10" height="8">
-                  <use href="./images/icons.svg#icon-Checkbox"></use>
+                  <use href="./images/icons.svg#icon-Property-1click"></use>
                 </svg> </span
               >I accept the terms and conditions of the
               <a
