--- a/portfolio.html
+++ b/portfolio.html
@@ -254,7 +254,7 @@
           </p>
         </div>
 
-        <div>
+        <div class="social-media-class">
           <p class="social-m">Social media</p>
           <ul class="social-icon">
             <li class="link-item">
