--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
             <label class="modal-form-agreement" for="user-privacy">
               <span class="modal-form-desc">
                 <svg class="modal-icon-check" width="10" height="8">
-                  <use href="./images/icons.svg#icon-Property-1click-1"></use>
+                  <use href="./images/icons.svg#icon-vector"></use>
                 </svg> </span
               >I accept the terms and conditions of the
               <a
